# nq

./: LICENSE  Makefile  README.md  demo.sh  docker-compose.yml  nginx.conf  package.json  start.sh  stop.sh
Sr_Design_Deliverables/: CS5001_Individual_Capstone_Assessment.docx  CS5001_Team_Contract.docx  User_Stories.md  grillinr_bio.md
backend/: .gitignore  AURA_SETUP.md  Cargo.toml  Dockerfile  README.md  data_def.sql  go.mod  go.sum  gqlgen.yml  main.go  neo4j.go  server.go
backend/db/: README.md  activity_repository.go  constraints.go  media_repository.go  neo4j.go  rating_repository.go  recommendation_repository.go  repositories.go  user_repository.go
backend/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
backend/graph/model/: models_gen.go
backend/integrations/: spotify.go
backend/src/: api_spec.yaml  db.rs  main.rs  structs.rs
frontend/: ACCOUNT_SETUP.md  App.tsx  Dockerfile  README.md  app.json  config.ts  package-lock.json  package.json
frontend/src/components/: ConnectionDemo.tsx  ServiceCard.tsx
frontend/src/config/: oauth.ts
frontend/src/screens/: AccountsScreen.tsx
frontend/src/services/: accountService.ts
frontend/src/types/: accounts.ts
