[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
